--- a/index.html
+++ b/index.html
@@ -54,53 +54,31 @@
         <div class="small-8 medium-8 large-8 columns contenido-right">
           <div class="row">
             <div class="large-12 columns">
-                <div class="row">
-                  <div class="large-12 columns">
-                    <h4>Aguacate relleno</h4>
-                  </div>
+              <div class="card float-center" style="width: 600px;">
+                <div class="card-divider">
+                  <h4>Aguacate relleno</h4>
                 </div>
-                <div class="row">
-                  <div class="large-12 columns">
-                      <h6>2018-08-29</h6>
-                  </div>
+                <img class="float-center" src="img/aguacate.jpg">
+                <div class="card-section parrafo">
+                  <p>Esta receta es una de la favoritas y fáciles, tan solo tienes que vaciar medio aguacate, picar la carne y mézclala con otros ingredientes que te gusten (por ejemplo tomate, pimientos de piquillo picados, manzana, perejil fresco, cilantro fresco, cebolla de primavera, ajetes tiernos, maíz dulce, zanahoria rallada…) y sírvetelo en la cáscara del aguacate.</p>
                 </div>
-                <div class="row">
-                  <div class="large-12 columns">
-                    <img class="float-center" src="img/aguacate.jpg" width="300">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-12 columns parrafo">
-                    <p>Esta receta es una de la favoritas y fáciles, tan solo tienes que vaciar medio aguacate, picar la carne y mézclala con otros ingredientes que te gusten (por ejemplo tomate, pimientos de piquillo picados, manzana, perejil fresco, cilantro fresco, cebolla de primavera, ajetes tiernos, maíz dulce, zanahoria rallada…) y sírvetelo en la cáscara del aguacate.</p>
-                  </div>
-                </div>
-                <div class="row"></div>
+              </div>
+
             </div>
           </div>
 
           <div class="row">
             <div class="large-12 columns">
-                <div class="row">
-                  <div class="large-12 columns">
-                    <h4>Espárragos enrollados</h4>
-                  </div>
+              <div class="card float-center" style="width: 600px;">
+                <div class="card-divider">
+                  <h4>Espárragos enrollados</h4>
                 </div>
-                <div class="row">
-                  <div class="large-12 columns">
-                      <h6>2018-08-29</h6>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-12 columns">
-                    <img class="float-center" src="img/esparrago.jpg" width="300">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-12 columns parrafo">
+                  <img class="float-center" src="img/esparrago.jpg">
+                <div class="card-section parrafo">
                     <p>Extiende la lámina de hojaldre y córtala en 8 cuadrados del mismo tamaño. Haz rollitos con un trozo de beicon y 3 espárragos. Envuélvelos y ciérralos presionando los extremos del hojaldre. Pinta este con el huevo batido y salpimienta y hornea 15 min en el horno precalentado a 220º C, hasta que el hojaldre se dore. </p>
-                  </div>
                 </div>
-                <div class="row"></div>
+              </div>
+              
             </div>
           </div>
 
